# national_forest_jp

./: .coverage  .coveragerc  LICENSE  README.md  __init__.py  data_list.csv  example.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
examples/: example_check_logging.py  example_download.py  example_dxf.py  example_esri_shape_file.py  example_geojson.py  example_geopackage.py  example_kml.py  example_kmz.py
geomesh/: data.py  formatter.py  geometries.py  jpmesh.py
nfj/: __init__.py  config.py  dxf.py  enums.py  fetch.py  fields.py  geopackage.py  geospatial.py  keyhole.py  logging_config.py  utils.py
nfj/.confs/: fields.yaml  nf_coding.yaml  urls.yaml
nfj/libs/geomesh/: .coverage  .gitignore  MANIFEST.in  README.md
nfj/libs/geomesh/.devcontainer/: Dockerfile  devcontainer.json
nfj/libs/geomesh/geomesh/: __init__.py  config.py  glmesh.py  square.py
nfj/libs/geomesh/geomesh.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nfj/libs/geomesh/tests/: conftest.py  test_glmesh.py
nfj/libs/geomesh/tests/data/: pref_pnt.csv
nfj/tests/: test_config.py  test_dxf.py  test_fetch.py  test_fields.py  test_geopackage.py  test_geospatial.py  test_keyhole.py  test_utils.py
nfj/tests/coverage_report/: report.html
others/: data_list.csv
tests/: __init__.py  data.py  test_data.py  test_geometries.py  test_jpmesh.py  test_square.py
