[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "national_forest_jp"
version = "0.1.0"
description = "国有林野データを取得・整形する Python ライブラリ"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
  "ezdxf>=1.4.4",
  "fastkml>=1.4.0",
  "geopandas>=1.1.3",
  "matplotlib>=3.10.9",
  "pandas>=3.0.1",
  "pyogrio>=0.12.1",
  "pydantic>=2.12.5",
  "PyYAML>=6.0.3",
  "regex",
  "requests>=2.32.5",
  "shapely>=2.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "pytest-html>=4.2.0",
]

[project.urls]
Repository = "https://github.com/shingo405nagano/national_forest_jp"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nfj*"]

[tool.setuptools.package-data]
nfj = [".confs/*.yaml"]